--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -14,6 +14,37 @@ body {
   margin: 0 auto;
   flex: 1;
 
+  & > .post + .post {
+    margin-top: var(--flow-space, 1.5em);
+  };
+
+  .breadcrumbs {
+    display: inline-flex;
+    overflow: hidden;
+    padding: 0.5rem;
+
+    li {
+        display: inline-flex;
+        a {
+            background: #fff;
+            color: #333;
+            outline: none;
+            position: relative;
+            text-decoration: none;
+            padding: 0.5rem 0.5rem 0.5rem 0;
+        }
+        &:not(:last-child) a::after {
+            content: '→';
+            padding-left: 0.5rem;
+            display: inline-block;
+        }
+    }
+
+    .breadcrumb-active a {
+        text-decoration: underline;
+    }
+}
+
   .title {
     font-size: var(--font-size-xxl);
   }
