--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -21,13 +21,12 @@ body {
   .breadcrumbs {
     display: inline-flex;
     overflow: hidden;
-    padding: 0.5rem;
+    padding: 0.5rem 0;
 
     li {
         display: inline-flex;
         a {
-            background: #fff;
-            color: #333;
+                        color: var(--fg);
             outline: none;
             position: relative;
             text-decoration: none;
