--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -20,25 +20,26 @@ main {
     display: inline-flex;
     overflow: hidden;
     padding: 0.5rem 0;
-  
+
     li {
-        display: inline-flex;
-        a {
-                        color: var(--fg);
-            outline: none;
-            position: relative;
-            text-decoration: none;
-            padding: 0.5rem 0.5rem 0.5rem 0;
-        }
-        &:not(:last-child) a::after {
-            content: '→';
-            padding-left: 0.5rem;
-            display: inline-block;
-        }
+      display: inline-flex;
+      a {
+        color: var(--fg);
+        outline: none;
+        position: relative;
+        text-decoration: none;
+        padding: 0.5rem 0.5rem 0.5rem 0;
+        color: #37be72;
+      }
+      &:not(:last-child) a::after {
+        content: "→";
+        padding-left: 0.5rem;
+        display: inline-block;
+      }
     }
-  
+
     .breadcrumb-active a {
-        text-decoration: underline;
+      text-decoration: underline;
     }
   }
 
