--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -7,6 +7,7 @@ pagination:
     - all
     - post
     - postsEnglish
+    - tagsListGlobal
 layout: tagged-posts.liquid    
 eleventyComputed:
   title: Tutti gli articoli di "{{ tag }}"
