--- a/_includes/tagged-posts.liquid
+++ b/_includes/tagged-posts.liquid
@@ -20,9 +20,12 @@ noIndex: true
     {% include 'theme' %}
     {% include 'header' %}
     <main class="blog-content flow">
-        <h1 class="title">{{ title }}</h1>
-        <p class="subtitle">Vedi i seguenti articoli</p>
-        {{content}}
+        {% include 'categories' %}
+        <div class="blog-content-right">
+            <h1 class="title">{{ title }}</h1>
+            <p class="subtitle">Vedi i seguenti articoli</p>
+            {{content}}
+        </div>
     </main>
     <footer class="page-footer">
         <div class="container">
