--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -92,7 +92,7 @@ body {
         display: flex;
         gap: 2rem;
         flex-direction: row;
-        padding-bottom: var(--flow-space, 1.5em);
+        padding: var(--flow-space, 1.5em) 0;
         @media (max-width: $breakpoint-sm) {
             flex-direction: column;
             gap: 0.5rem;
